# cscs-keygen

./: .gitignore  Pipfile  README.md  credentials_helper.py  cscs_keygen.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: pages.yml
cscs-keygen/: credentials_helper.py  cscs_keygen.py
cscs_keygen/: __init__.py  __main__.py  agent.py  app.py  credentials_helper.py  cscs_keygen.py  logger.py  models.py  utils.py
